splash screen fix

--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,7 @@
 			</div>
 			
 			<div id="bookmarksFromSearch" 
-				on="click then l:clearSearch and l:player[mode=bookmarks, text=Bookmarks] and l:player.search
+				on="click then l:clearSearch and l:player[mode=bookmarks, text=Bookmarks] and l:player.search and l:hideSplash
 					or l:player[mode=search] then effect[appear]
 					or l:player[mode=play] then hide
 					or l:player[mode=bookmarks] then hide">
