--- a/public/index.html
+++ b/public/index.html
@@ -51,21 +51,13 @@
 				on="l:player[mode=search] then hide
 					or l:player[mode=bookmarks] then hide
 					or l:player[mode=play] then effect[appear]">
-<<<<<<< HEAD:public/index.html
+
 				<div id="progressBar" on="click then script[Player.jumpTo()]">
 					<div id="progressBarHandle" style="left: 0px;"
 						set="behavior[draggable, constraint=horizontal]"
 						on="drag then script[Player.hConstraint(100, 740)]
 								or dragend then script[Player.cueVideo()]">
-=======
-				<div id="progressBar">
-					<div id="progressBarHandle" 
-						set="behavior[draggable, constraint=horizontal"
-						on="mouseup then script[alert($progressBarHandle.offsetLeft)]
-							or mousedown then script[alert($progressBarHandle.offsetLeft)]
-							or drag then script[alert('x')]
-							">
->>>>>>> f81234aaafd23225fa1a2a471560a9b15c1ce32c:public/index.html
+
 						<div id="handlePointer"></div>
 					</div>
 				</div>
@@ -92,13 +84,14 @@
 					<div id="bookmarkCurrent" on="click then l:player.bookmarkCurrent and effect[Opacity,from=1.0,to=0.2,duration=0.5]
 						or l:player.play[bookmarked=false] then effect[appear]
 						or l:player.play[bookmarked=true] then effect[Opacity,from=1.0,to=0.2,duration=0.5]">Bookmark</div>
-					<div id="search" on="click then l:player[mode=search, text=Search] and l:player.search">Search</div>
+					<div id="search" on="click then l:player[mode=search, text=Search] and l:player.search and l:hideSplash">Search</div>
 					
-					<div id="volume" on="click then l:playerVolume">
+					<!-- how about a volume control? that'd be cool! -->
+					<!-- div id="volume" on="click then l:playerVolume">
 						<div id="volumeSlider" style="display:none" on="l:playerVolume then toggle[display=block]">
 							<img id="volumeSliderHandle" src="images/player/volumeSliderHandle.png" set="behavior[draggable, constraint=vertical">
 						</div>
-					</div>
+					</div -->
 				</div>
 			</div>
 
