public/images/close.png

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 			<div id="se"></div>
 			<div id="nw"></div>
 			<div id="sw"></div>
-			<div id="close" on="click then close">X</div>
+			<div id="close" on="click then close"><img src="images/close.png"/></div>
 			<div id="splash" on="l:hideSplash then hide"></div>
 			<div id="logo" on="l:hideSplash then hide or click then l:player[mode=play, text=expr(currentVideo.title)] and hide"></div>
 			<div id="appTitle" on="l:hideSplash then hide">Playtanium</div>
