--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,10 @@
 
 		<div id="playerBody">
 			<div id="background"></div>
-			<div id="n"></div>
+			<!-- div id="n"></div>
 			<div id="e"></div>
 			<div id="s"></div>
-			<div id="w"></div>
+			<div id="w"></div -->
 			<div id="ne"></div>
 			<div id="se"></div>
 			<div id="nw"></div>
@@ -87,11 +87,11 @@
 					<div id="search" on="click then l:player[mode=search, text=Search] and l:player.search and l:hideSplash">Search</div>
 					
 					<!-- how about a volume control? that'd be cool! -->
-					<!-- div id="volume" on="click then l:playerVolume">
+					<div id="volume" on="click then l:playerVolume">
 						<div id="volumeSlider" style="display:none" on="l:playerVolume then toggle[display=block]">
 							<img id="volumeSliderHandle" src="images/player/volumeSliderHandle.png" set="behavior[draggable, constraint=vertical">
 						</div>
-					</div -->
+					</div>
 				</div>
 			</div>
 
